# youtube-analytics

./: .env.template  .gitignore  ENHANCED_FEATURES_SUMMARY.md  NEW_UI_GUIDE.md  QUICK_START_NEW_UI.md  README.md  README_CHANNEL_VIDEO_ANALYTICS.md  START_HERE.md  TESTING_GUIDE.md  UI_FIXES_SUMMARY.md  app.py  check_db_status.py  critical_diagnostic.py  diagnose_data_flow.py  final_test.py  final_verification.py  main_api.py  pyproject.toml  requirements.txt  reset_and_verify.py  test_app.py  test_data_integration.py  test_database_integration.py  test_session.py  verify_session_flow.py
docs/: BUILD_COMPLETE.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SUMMARY.txt  INSTALLATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  START_HERE.md
static/: app.js
templates/: index.html
tests/: __init__.py  conftest.py  test_youtube_analytics.py
youtube_analytics/: __init__.py  config.py  database.py  fetcher.py  visualizer.py
